# Sentinel

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  env.example
.cargo/: audit.toml
.cursor/rules/: sentinel-agent-workflow.mdc
.github/workflows/: release-agent-windows.yml  release-server-docker.yml
agent/: Cargo.toml  tauri.conf.json
agent/patches/browser-url/src/: lib.rs
agent/patches/browser-url/src/platform/: windows.rs
agent/src/: agent_loop.rs  app_block.rs  app_display.rs  capture.rs  config.rs  enrollment.rs  input.rs  ipc.rs  keyboard_capture.rs  keylogger.rs  log_sources.rs  main.rs  mdns_discover.rs  network_policy.rs  network_scheduler.rs  remote_script.rs  schedule.rs  server_command.rs  service.rs  software_inventory.rs  system_info.rs  toast.rs  ui.rs  updater_client.rs  updater_manifest.rs  url_scraper.rs  win_icons.rs  window_tracker.rs  ws_client.rs
agent/tools/: gen_tray_icons.py  gen_wix_assets.py  requirements-wix.txt
agent/ui-src/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
agent/ui-src/src/: App.tsx  index.css  main.tsx  nativeChrome.ts
agent/ui-src/src/styles/: agent-cloudscape.css
agent/ui-src/ui-src/: package-lock.json
agent/wix/assets/: license.rtf
agent/wix/fragments/: run-at-logon.wxs
agent/wix/templates/: main.noshortcuts.wxs
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App-old.tsx  App.tsx  global.d.ts
frontend/src/components/: ActivityTab.tsx  AgentSettingsTab.tsx  AlertRuleEventScreenshotCell.tsx  CategoryManagerModal.tsx  DataTable.tsx  FilesTab.tsx  KeysTab.tsx  PreferencesTab.tsx  ScreenTab.tsx  Sidebar.tsx  UrlsTab.tsx  WindowsTab.tsx
frontend/src/components/common/: AppIcon.tsx  AuditStatusBadge.tsx  CollectionStates.tsx  DashboardUserAvatar.tsx  EmptyState.tsx  InfoLink.tsx  LiveBadge.tsx  StatusIndicator.tsx
frontend/src/components/detail/: AgentDetailTabContent.tsx  GeneralConfig.tsx  PageHeader.tsx  ToolsContent.tsx
frontend/src/components/navigation/: SideNav.tsx  TopNav.tsx
frontend/src/components/overview/: AddAgentModal.tsx  AgentCard.tsx  BulkAddToGroupModal.tsx  BulkScriptModal.tsx  FullPageHeader.tsx
frontend/src/components/settings/: ServerSettingsModal.tsx
frontend/src/components/tabs/: AgentLogsTab.tsx  AlertsTab.tsx  AnalyticsTab.tsx  AppBlockModal.tsx  AuditTab.tsx  ControlTab.tsx  EventsTab.tsx  FilesTab.tsx  KeysTab.tsx  ScreenTab.tsx  ScriptsTab.tsx  SoftwareTab.tsx  SpecsTab.tsx  UrlsTab.tsx  WindowsTab.tsx
frontend/src/components/timeline/: ActivityTimeline.tsx  SessionCard.tsx  TimelineFilters.tsx
frontend/src/components/ui/: Modal.tsx  (+1 more)
frontend/src/hooks/: useAgentActivitySessions.ts  useAgentInferredIdle.ts  useAgents.ts  useLocalStorage.ts  useMediaQuery.ts  useNotifications.ts  usePollDashboardServerVersion.ts  useResolvedAgentInfo.ts  useTheme.ts  useWebSocket.ts
frontend/src/layouts/: AuthLayout.tsx  DashboardLayout.tsx
frontend/src/lib/: activityBookmarks.ts  activityUrl.ts  agentIcons.tsx  agentTabNav.tsx  api.ts  app-names.ts  cards-config.tsx  compat.ts  formatEnrollmentCode.ts  preferences.ts  retentionForm.ts  serverSettings.ts  serverVersionStore.ts  session-aggregator.ts  types.ts  userAvatar.ts  utils.ts
frontend/src/pages/: AgentDetailPage.tsx  LoginPage.tsx  LogsPage.tsx  NotificationsAdminPage.tsx  OverviewPage.tsx  RulesPage.tsx  SettingsPage.tsx  UsersPage.tsx
frontend/src/routes/: AuthenticatedAgentDetail.tsx  AuthenticatedGroups.tsx  AuthenticatedLogs.tsx  AuthenticatedNotifications.tsx  AuthenticatedOverview.tsx  AuthenticatedRules.tsx  AuthenticatedSettings.tsx
frontend/src/styles/: cloudscape-theme.css
server/: Cargo.toml  Dockerfile
server/migrations/: 0004_domain_blocklists.sql  0005_drop_domain_blocklists.sql  0006_retention.sql  0007_agent_local_ui_password.sql  0008_audit_log.sql  0009_telemetry_aggregates.sql  0010_agent_software.sql  0011_audit_log_client_ip.sql  0012_agent_icons.sql  0013_agent_icon_default.sql  0014_dashboard_users.sql  0015_dashboard_sessions.sql  0016_dashboard_identities.sql  0017_dashboard_session_csrf.sql  0018_alert_rules_and_groups.sql  0019_alert_rule_events.sql  0020_app_display_names.sql  0022_alert_rule_screenshots.sql  0023_app_icons.sql  0024_agent_auto_update.sql  0025_agent_auto_update_default_off.sql  0026_dashboard_user_display_icon.sql  0027_retention_agent_zero_unlimited.sql  0028_dashboard_user_display_name.sql  0029_agent_enrollment_and_api_tokens.sql  0030_agent_enrollment_usage_and_revocation.sql  0031_agent_internet_blocked.sql  0032_app_block_rules.sql  0033_app_block_rules_bigint.sql  0034_app_block_events.sql  0035_internet_block_rules.sql  0036_url_categorization.sql  0037_alert_rules_url_category.sql  0038_url_categorization_job.sql  0039_url_sessions.sql  0040_url_category_labels.sql  0041_url_category_overrides.sql  0042_more_url_category_labels.sql  0043_url_custom_categories.sql  0044_url_custom_category_members_unique.sql  (+10 more)
server/src/: agent_enroll_http.rs  alert_rules.rs  api.rs  auth.rs  config.rs  db.rs  error.rs  integration.rs  main.rs  mdns_broadcast.rs  metrics.rs  oidc.rs  oidc_http.rs  scheduler.rs  secrets.rs  state.rs  url_categorization.rs  wol.rs  ws_agent.rs  ws_viewer.rs
server/src/api/: agent_analytics.rs  agent_enrollment.rs  agents_capture.rs  agents_list.rs  agents_logs.rs  agents_telemetry.rs  app_block.rs  assets.rs  audit.rs  auto_update.rs  groups_and_rules.rs  helpers.rs  internet_block.rs  local_ui.rs  mod.rs  network_policy.rs  pagination.rs  retention.rs  scheduled_scripts.rs  settings.rs  software_scripts.rs  url_categorization.rs  url_categorization_recalc.rs  url_category_overrides.rs  url_custom_categories.rs  users.rs  version.rs
server/src/notify/: home_assistant.rs  mod.rs  sentinel_notification.yaml
server/static/: index.html
src/: capture.rs  main.rs  url_scraper.rs  window_tracker.rs
