[package]
name        = "win-rust-client"
version     = "0.1.0"
edition     = "2021"
description = "Production-grade Windows monitoring agent – screen capture, URL scraping, and remote input injection over WebSocket"
authors     = ["win-rust-client"]

# This binary is Windows-only.  Cross-compile from Linux with:
#   cargo build --release --target x86_64-pc-windows-gnu
[[bin]]
name = "win-rust-client"
path = "src/main.rs"

# ─────────────────────────────────────────────────────────────────────────────
# Dependencies
# ─────────────────────────────────────────────────────────────────────────────
[dependencies]

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio        = { version = "1",    features = ["full"] }
futures-util = "0.3"

# ── WebSocket ─────────────────────────────────────────────────────────────────
# native-tls enables wss:// support (bring-your-own cert store)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite       = { version = "0.24", default-features = false }
# tungstenite >= 0.21 uses Bytes for binary frames
bytes = "1"

# ── Screen capture (Windows Graphics Capture API) ─────────────────────────────
windows-capture = "1"

# ── JPEG encoding ─────────────────────────────────────────────────────────────
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# ── Browser URL scraping ──────────────────────────────────────────────────────
browser-url = "0.1"

# ── Input injection ───────────────────────────────────────────────────────────
enigo = "0.2"

# ── Windows API (foreground-window / window-title tracking) ───────────────────
# windows-capture already pulls this in transitively; we declare it explicitly
# so we can use Win32_UI_WindowsAndMessaging directly.
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

# ── Serialisation ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Error handling ────────────────────────────────────────────────────────────
anyhow    = "1"
thiserror = "1"

# ─────────────────────────────────────────────────────────────────────────────
# Release profile – optimise for small, fast binary
# ─────────────────────────────────────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
