# Build with:  cargo xwin build --release
# (run from the agent/ directory, or from the repo root with -p agent)
#
# The agent is intentionally NOT a member of the workspace because it is a
# Windows-only binary.  Including it in a workspace causes Linux tooling
# (rust-analyzer, cargo check, Docker builds) to try to compile
# Windows-only crates such as windows-capture on Linux, where
# #[cfg(windows)] is false and the build always fails.

[package]
name        = "sentinel-agent"
version     = "0.1.0"
edition     = "2021"
description = "Sentinel – Windows monitoring agent: screen capture, keylogging, URL tracking, and remote control over WebSocket"

# Windows-only binary.  Cross-compile from Linux with:
#   cargo xwin build --release --package sentinel-agent
[[bin]]
name = "sentinel-agent"
path = "src/main.rs"

[dependencies]

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio        = { version = "1",    features = ["full"] }
futures-util = "0.3"

# ── WebSocket ─────────────────────────────────────────────────────────────────
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite       = { version = "0.24", default-features = false }
native-tls        = "0.2"

# ── Screen capture ────────────────────────────────────────────────────────────
# xcap is a cross-platform capture library; on Windows it uses the Graphics
# Capture API internally but returns a clean RgbaImage — no buffer-padding
# or dimension mismatch issues.
xcap = "0.9"

# ── JPEG encoding ─────────────────────────────────────────────────────────────
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# ── Browser URL scraping ──────────────────────────────────────────────────────
browser-url = "0.1"

# ── Input injection ───────────────────────────────────────────────────────────
enigo = "0.2"

## ── Tauri (webview settings window) ─────────────────────────────────────────
## This agent is Windows-only; keeping these under cfg(windows) prevents pulling
## Linux GTK/WebKit dependency trees (and their advisories) into Cargo.lock.

# ── Windows API (keylogger, window tracker, toast notifications) ────────────
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Data_Xml_Dom",
    "UI_Notifications",
] }

xml-rs = "0.8"

# ── Serialisation ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
base64     = "0.22"
percent-encoding = "2"

# Windows DPAPI: encrypt `config.dat` at rest (tied to this user + machine).
windows-dpapi = "0.2"

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender   = "0.2"

# ── Error handling ────────────────────────────────────────────────────────────
anyhow    = "1"
thiserror = "1"

# ── Password hashing ──────────────────────────────────────────────────────────
sha2 = "0.10"

# ── Platform directories (AppData) ───────────────────────────────────────────
dirs = "6"

# ── System / network info ─────────────────────────────────────────────────────
sysinfo = "0.37"
ipconfig = "0.3"

# ── Installed software (registry) / temp script files ────────────────────────
tempfile = "3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"


# ── Build dependencies ───────────────────────────────────────────────────────
[target.'cfg(windows)'.build-dependencies]
tauri-build = { version = "2", features = [] }

# ─────────────────────────────────────────────────────────────────────────────
# Release profile – small, fast, single-file binary
# ─────────────────────────────────────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

# ─────────────────────────────────────────────────────────────────────────────
# Local patches
# ─────────────────────────────────────────────────────────────────────────────
# browser-url 0.1.1 ships with two hardcoded debug println!s in its Windows
# backend.  This is a verbatim copy with those two lines removed.
[patch.crates-io]
browser-url = { path = "patches/browser-url" }
