[package]
name    = "sentinel-server"
version = "0.1.0"
edition = "2021"
description = "Sentinel – WebSocket ingestion server, PostgreSQL storage, and web dashboard"

[[bin]]
name = "sentinel-server"
path = "src/main.rs"

[dependencies]

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio        = { version = "1", features = ["full"] }
futures-util = "0.3"

# ── HTTP + WebSocket server ───────────────────────────────────────────────────
axum       = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# ── Database ──────────────────────────────────────────────────────────────────
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# ── Types ─────────────────────────────────────────────────────────────────────
uuid   = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# ── Serialisation ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── MQTT ──────────────────────────────────────────────────────────────────────

# ── Streaming / bytes ─────────────────────────────────────────────────────────
bytes        = "1"
async-stream = "0.3"

# ── Error handling ────────────────────────────────────────────────────────────
anyhow = "1"
subtle = "2.6.1"

# ── Dashboard auth (multi-user) ───────────────────────────────────────────────
argon2 = "0.5"
rand = "0.8"

# ── OIDC (Authentik) ──────────────────────────────────────────────────────────
openidconnect = { version = "4", features = ["reqwest"] }
oauth2 = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
base64 = "0.22"
urlencoding = "2.1"

# ── Agent local UI password (SHA-256, match Windows agent config.rs) ─────────
sha2 = "0.10"